--- a/style/common.css
+++ b/style/common.css
@@ -25,7 +25,7 @@
 }
 
 .seravo-spinner {
-  background: url(../../../../wp-admin/images/spinner.gif) no-repeat;
+  background: url('../images/spinner.gif') no-repeat;
   background-size: 20px 20px;
   vertical-align: middle;
   opacity: 0.7;
@@ -57,7 +57,7 @@
 }
 
 .seravo-nag .side-by-side-container {
-  margin: 0px 0 0px 0;
+  margin: 0 0 0 0;
   flex-wrap: nowrap;
   float: right;
 }
@@ -75,21 +75,21 @@ div#php-warning-widget.postbox {
 
 .success-box {
   padding: 10px;
-  border: 1.5px solid#ccd0d4;
+  border: 1px solid#ccd0d4;
   border-left: solid 0.3em #038103;
   border-bottom: none;
 }
 
 .issue-box {
   padding: 10px;
-  border: 1.5px solid#ccd0d4;
+  border: 1px solid#ccd0d4;
   border-left: solid 0.3em red;
   border-bottom: none;
 }
 
 .success-box .tooltip,
 .issue-box .tooltip {
-  padding-left: 0px;
+  padding-left: 0;
   margin-right: 5px;
 }
 
@@ -318,7 +318,6 @@ table.widefat {
   -webkit-transform: translateY(-50%);
   float: right;
   height: 1em;
-  margin-right: 0.5em;
   position: relative;
   top: 50%;
   transform: translateY(-50%);
