--- a/style/seravo-postbox.css
+++ b/style/seravo-postbox.css
@@ -69,14 +69,14 @@
 
 @media only screen and (min-width:1430px) {
   .seravo-postbox .inside {
-    padding: 10px 15px 0px 15px;
+    padding: 10px 15px 0 15px;
     margin: 0;
   }
 }
 
 @media only screen and (max-width: 1431px) {
   .seravo-postbox .hideMobile {
-    font-size: 0px;
+    font-size: 0;
   }
 }
 
